fix: columnSlider spacing

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -96,9 +96,6 @@ main
         width: 0
       &-Slider
         position: relative
-        width: 100%
-        height: 100%
-        padding: var(--spacing-base) var(--spacing-side)
         &-Item
           width: 100%
       &-Text
@@ -150,7 +147,7 @@ main
         &-Details
           @media (min-width: 770px)
             display: none
-      &-Image, &-Thumbnail, &-Video
+      &-Image, &-Thumbnail, &-Video, &-Slider
         padding: 0 var(--spacing-side)
         padding-bottom: var(--spacing-base)
         flex-grow: 1
